Version 0.12
    o fixed varFormat when exporting to DDI

Version 0.11
    o new argument "xmlns" in function exportDDI(), to allow creating XML files
      using a namespace
    o new argument "..." in function exportDDI(), to accept more incoming options
    o improved setup file to import .csv file into R

Version 0.10
    o new arguments "monolang" and "xmlang" in function exportDDI()
    o removed formal argument "embed" from function convert(), but it is still
      possible to be used via the "..." and automatically passed to exportDDI()
    o more validation checks when converting to DDI Codebook

Version 0.9
    o added the necessary "ddi:codebook:2_5" statement to the xsi:schemaLocation
      in the codebook, to validate the resulting DDI .xml file
    o updated the documentation of function convert() to explain how to use the
      argument "user_na" from function read.spss() in package haven
    o new argument "recode" in function convert(), to allow users to control
      if the Stata missing values get recoded to actual numbers
    o function recodeMissing() renamed to recodeValues()
    o improved function setupfile(), now accepting datafiles as input
    o more integration with read / write functions from package haven
    o multiple improvements and bug fixes to the internal code

Version 0.8
    o fixed bug exporting invalid DDI .xml files
    o fixed bug exporting declared missing values to Excel
    o new logical argument "declared" in function convert() allowing users to
      control if variables in converted objects will have the class 'declared'

Version 0.7
    o proper production of setup files due to changing the codeBook structure
    o modified convert() for objects of class 'declared', to avoid a bug in
      package ReadStat that prevents exporting missing values to SPSS for
      integer variables
    o sync-ed with the latest version of package admisc

Version 0.6
    o function convert() now invisibly returns the imported data